# taller

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/admin-web/: Dockerfile  next.config.js  package.json
apps/admin-web/app/: ThemeRegistry.tsx  globals.css  layout.tsx  page.tsx
apps/admin-web/app/(dashboard)/: layout.tsx
apps/admin-web/app/login/: page.tsx
apps/admin-web/scripts/: next.cjs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  history.tsx  index.tsx  inspection.tsx  login.tsx  reception.tsx  signature.tsx
backend/: Dockerfile  go.mod
backend/cmd/api/: main.go
backend/internal/api/handlers/: auth_handler.go  vehicles.go
backend/internal/api/middleware/: auth.go
backend/internal/api/routes/: routes.go
backend/internal/auth/: context.go  jwt.go
backend/internal/domain/: company.go  fault.go  inspection.go  inspection_item.go  inspection_signature.go  inspection_template.go  media.go  notification.go  repair.go  report.go  user.go  vehicle.go  workshop.go  workshop_entry.go
backend/internal/repositories/: entry_repo.go  inspection_repo.go  media_repo.go  notification_repo.go  repair_repo.go  report_repo.go  signature_repo.go  user_repo.go  vehicle_repo.go
db/migrations/: 001_init.sql  002_inspections.sql  003_signatures.sql  004_repairs.sql
infra/docker/: docker-compose.yml
infra/nginx/: nginx.conf
scripts/: fix-next-transpiled-packages.js  link-next-in-admin-web.js
(+21 files in other folders)
